Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122798

[REG 5.15 -> 6.7 (or earlier)] QStringRef -> QStringView conversion loses null-ness

    XMLWordPrintable

Details

    • 3
    • 6d80b76e9 (dev), 63add2fdd (dev), 92094c9b3 (6.9), 544108b44 (6.9), 97dd3b202 (6.8), 6bef8db7b (tqtc/lts-6.5), 27c6b754f (6.8), 9253006c4 (tqtc/lts-6.5), a0e653984 (dev), 9e86f73f8 (6.9), 029af22ef (6.8), 31017ff44 (tqtc/lts-6.5)
    • Foundations Sprint 102, Foundation Sprint 103, Foundation Sprint 104, Foundation Sprint 105, Foundation Sprint 106, Foundation Sprint 107, Foundation Sprint 108, Foundation Sprint 109, Foundation Sprint 110, Foundation Sprint 111, Foundation Sprint 112, Foundation Sprint 113, Foundation Sprint 114, Foundation Sprint 115, Foundation Sprint 116, Foundation Sprint 117, Foundation Sprint 118, Foundation Sprint 119, Foundation Sprint 120, Foundation Sprint 121, Foundation Sprint 122

    Description

      This fails in dev:

      QString null;
      QVERIFY(null.isNull());         // OK
      QStringRef nullRef(&null);
      QVERIFY(nullRef.isNull());      // OK
      QStringView nullView = nullRef;
      QVERIFY(nullView.isNull());     // FAIL
      

      Expectation is that, like in Qt 5, nullness is preserved.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: